WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226657
[iOS] Unexpected scrolling when switching focus from a text input to a select element
https://bugs.webkit.org/show_bug.cgi?id=226657
Summary
[iOS] Unexpected scrolling when switching focus from a text input to a select...
Aditya Keerthi
Reported
2021-06-04 12:44:24 PDT
...
Attachments
Patch
(7.90 KB, patch)
2021-06-04 13:06 PDT
,
Aditya Keerthi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2021-06-04 12:44:49 PDT
<
rdar://problem/78290515
>
Aditya Keerthi
Comment 2
2021-06-04 13:06:38 PDT
Created
attachment 430601
[details]
Patch
Aditya Keerthi
Comment 3
2021-06-04 13:24:43 PDT
Thanks for the review! Will land after EWS.
EWS
Comment 4
2021-06-07 06:26:47 PDT
Committed
r278559
(
238557@main
): <
https://commits.webkit.org/238557@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 430601
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug